#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(orphan-thumbnail, 0.0.1b, kitty at kitty.in.th)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([orphan-thumbnail.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB(png, png_read_info)

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([unistd.h stdlib.h string.h inttypes.h dirent.h getopt.h pwd.h libpng/png.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_STRUCT_TM
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([strcasecmp getpwnam scandir stat remove])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
